// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-o1ook0-0 ePDWDk css-vurnku"
  >
    <div
      class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteContainerRow-sc-o1ook0-1 lmTMKd itvFNV ibRCpr"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV fzMiot"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-4 kkXINS"
        >
          <svg
            class="RoutingDiagram__DotColor-sc-o1ook0-5 kgYqrO"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-6 gayll OurGh"
        >
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__ProtocolBadge-sc-o1ook0-7 gayll bNVqMw"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab RoutingDiagram__BadgeText-sc-o1ook0-8 dYpdfO css-15li2d9"
            >
              V2
            </div>
          </div>
          <div
            class="theme__TextWrapper-sc-18nh1jk-0 cWOfab RoutingDiagram__BadgeText-sc-o1ook0-8 dYpdfO css-1aekuku"
            style="min-width: auto;"
          >
            75%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          Popover
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
    <div
      class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteContainerRow-sc-o1ook0-1 lmTMKd itvFNV ibRCpr"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV fzMiot"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-4 kkXINS"
        >
          <svg
            class="RoutingDiagram__DotColor-sc-o1ook0-5 kgYqrO"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-6 gayll OurGh"
        >
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__ProtocolBadge-sc-o1ook0-7 gayll bNVqMw"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab RoutingDiagram__BadgeText-sc-o1ook0-8 dYpdfO css-15li2d9"
            >
              V3
            </div>
          </div>
          <div
            class="theme__TextWrapper-sc-18nh1jk-0 cWOfab RoutingDiagram__BadgeText-sc-o1ook0-8 dYpdfO css-1aekuku"
            style="min-width: auto;"
          >
            25%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          PopoverPopover
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-o1ook0-0 ePDWDk css-vurnku"
  >
    <div
      class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteContainerRow-sc-o1ook0-1 lmTMKd itvFNV ibRCpr"
    >
      CurrencyLogo currency=USDC
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV fzMiot"
      >
        <div
          class="RoutingDiagram__DottedLine-sc-o1ook0-4 kkXINS"
        >
          <svg
            class="RoutingDiagram__DotColor-sc-o1ook0-5 kgYqrO"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-6 gayll OurGh"
        >
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__ProtocolBadge-sc-o1ook0-7 gayll bNVqMw"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab RoutingDiagram__BadgeText-sc-o1ook0-8 dYpdfO css-15li2d9"
            >
              V3
            </div>
          </div>
          <div
            class="theme__TextWrapper-sc-18nh1jk-0 cWOfab RoutingDiagram__BadgeText-sc-o1ook0-8 dYpdfO css-1aekuku"
            style="min-width: auto;"
          >
            100%
          </div>
        </div>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          Popover
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__Wrapper-sc-o1ook0-0 ePDWDk css-vurnku"
  />
</DocumentFragment>
`;
